--- a/src/assets/scss/template/_pricing.scss
+++ b/src/assets/scss/template/_pricing.scss
@@ -121,8 +121,8 @@
                 border-color: var(--color-white);
                 color: var(--color-dark);
                 &:hover {
-                    background-color: var(--color-accent1);
-                    border-color: var(--color-accent1);
+                    background-color: var(--color-dark);
+                    border-color: var(--color-dark);
                     color: var(--color-white);
                 }
             }
