--- a/src/assets/scss/template/_call-to-action.scss
+++ b/src/assets/scss/template/_call-to-action.scss
@@ -11,13 +11,13 @@
   position: relative;
   z-index: 1;
   @media #{$smlg-device} {
-    padding: 100px 0;
+    padding: 100px 0 0 0;
   }
   @media #{$md-layout} {
-    padding: 80px 0;
+    padding: 80px 0 0 0;
   }
   @media #{$sm-layout} {
-    padding: 60px 0 40px;
+    padding: 60px 0 0 40px;
   }
   &:before {
     content: "";
