--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,61 +1,61 @@
-/*---------------------------------------------
-Template Name: Abstrak
-Template URL: https://new.axilthemes.com/demo/react/abstrak/
-Description: Digital Agency React JS Template.
-Author: Axilthemes
-Author URL: https://axilthemes.com/
-Version: 1.1.0
-
-===============================================   
-STYLESHEET INDEXING
-|
-|___ Default Styles
-|	|___ Variables
-|	|___ Reset Styels
-|	|___ Typography
-|	|___ Forms Styles
-|	|___ Helper Classes 
-|
-|___ Elements Styles
-|	|___ Back To Top
-|	|___ Breadcrumb
-|	|___ Button
-|	|___ Pagination 
-|	|___ Section Heading
-|	|___ Slick 
-|
-|___Template Styles
-|	|___ About Us
-|	|___ Banner
-|	|___ Brand
-|	|___ Call To Action
-|	|___ Case Study
-|	|___ Contact
-|	|___ Counter Up
-|	|___ FAQ
-|	|___ Pricing
-|	|___ Process
-|	|___ Project
-|	|___ Service
-|	|___ Team
-|	|___ Testimonial
-|	|___  Why Choose
-|	|___  404 Error
-|
-|___Blocks Styles
-|	|___ Header Styles
-|	|___ Blog Styles
-|	|___ Footer Styles
-|
-|___Dark Style
-|
-|___Spacing
-|
-|___RTL
-|
-|___ END STYLESHEET INDEXING
-
---------------------------------------------*/
+/**
+ * ---------------------------------------------
+ * Template Name: Evocation it
+ * Template URL: evocationit.com
+ * 
+ * ===============================================   
+ * STYLESHEET INDEXING
+ * |
+ * |___ Default Styles
+ * |	|___ Variables
+ * |	|___ Reset Styels
+ * |	|___ Typography
+ * |	|___ Forms Styles
+ * |	|___ Helper Classes 
+ * |
+ * |___ Elements Styles
+ * |	|___ Back To Top
+ * |	|___ Breadcrumb
+ * |	|___ Button
+ * |	|___ Pagination 
+ * |	|___ Section Heading
+ * |	|___ Slick 
+ * |
+ * |___Template Styles
+ * |	|___ About Us
+ * |	|___ Banner
+ * |	|___ Brand
+ * |	|___ Call To Action
+ * |	|___ Case Study
+ * |	|___ Contact
+ * |	|___ Counter Up
+ * |	|___ FAQ
+ * |	|___ Pricing
+ * |	|___ Process
+ * |	|___ Project
+ * |	|___ Service
+ * |	|___ Team
+ * |	|___ Testimonial
+ * |	|___  Why Choose
+ * |	|___  404 Error
+ * |
+ * |___Blocks Styles
+ * |	|___ Header Styles
+ * |	|___ Blog Styles
+ * |	|___ Footer Styles
+ * |
+ * |___Dark Style
+ * |
+ * |___Spacing
+ * |
+ * |___RTL
+ * |
+ * |___ END STYLESHEET INDEXING
+ * 
+ * --------------------------------------------
+ *
+ * @format
+ */
 
 /*=======================================================================
 1. Default Styles
@@ -121,5 +121,3 @@ STYLESHEET INDEXING
 7. RTL 
 =========================================================================*/
 // @import "rtl/rtl";
-
-
